# teste_tecnico_btg

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
config/: settings.py
docs/: estudo-defesa-apresentacao.md
docs/architecture/: .gitkeep  README.md  data-flow.md
docs/decisions/: .gitkeep  ADR-001-sem-framework.md  ADR-002-date-coherence.md  ADR-003-structured-outputs.md  ADR-004-golden-over-isin-checksum.md  ADR-005-type-consistency-classifier.md  ADR-006-aliquota-condicional.md  ADR-007-ocr-confidence-ceiling.md  ADR-008-model-as-config.md
docs/schemas/: .gitkeep  output-json-example.md
enunciado/: Enunciado - Case AI Dev.md
output/: exceptions_report.md
output/records/: 01_energetica_vale_tiete_dividendo.json  02_banco_meridional_jcp.json  03_siderurgica_paranaense_proventos.json  04_rede_varejo_jcp_sem_data.json  05_aurora_saneamento_dividendo_datas.json  06_petroquimica_litoral_grupamento.json  07_telecom_norte_jcp_SCAN.json  08_construtora_horizonte_bonificacao.json
src/classification/: __init__.py  classifier.py  prompts.py  schemas.py
src/confidence/: __init__.py  models.py  (+1 more)
tests/: conftest.py  test_classify_llm.py  test_exceptions_report.py  test_extract_native_llm.py  test_extraction_ocr.py  test_golden_records_repository.py  test_ingest.py  test_pipeline_llm.py  test_record_builder.py  test_schemas_records.py  test_validate_score_route.py  test_validator_date_coherence.py  test_validator_golden_records.py  test_validator_gross_net.py  test_validator_isin_checksum.py  test_validator_type_consistency.py
(+30 files in other folders)
